--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
     <link
-      href="https://fonts.googleapis.com/css?family=Lato:100,300,300i,400&display=swap"
+      href="https://fonts.googleapis.com/css?family=Barlow+Condensed:100,300,300i,400,600,700,900&display=swap"
       rel="stylesheet"
     />
     <link
